tmp/coverage_pytest.log

==================================== ERRORS ====================================
__________________ ERROR collecting tests/test_ab_compare.py ___________________
.venv/lib/python3.11/site-packages/_pytest/python.py:498: in importtestmodule
    mod = import_path(
.venv/lib/python3.11/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/opt/homebrew/Cellar/python@3.11/3.11.13_1/Frameworks/Python.framework/Versions/3.11/lib/python3.11/importlib/__init__.py:126: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1204: in _gcd_import
    ???
<frozen importlib._bootstrap>:1176: in _find_and_load
    ???
<frozen importlib._bootstrap>:1147: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:690: in _load_unlocked
    ???
.venv/lib/python3.11/site-packages/_pytest/assertion/rewrite.py:186: in exec_module
    exec(co, module.__dict__)
tests/test_ab_compare.py:6: in <module>
    from adhash.config_toolkit import clone_config
src/adhash/__init__.py:3: in <module>
    from . import analysis, batch, contracts, core, io, metrics, tui, workloads
src/adhash/batch/__init__.py:3: in <module>
    from .runner import BatchRunner, load_spec
src/adhash/batch/runner.py:18: in <module>
    from adhash import _safe_subprocess
E     File "/Users/jguida941/Dev/GitHubProject/AdaptiveHashMapCli/src/adhash/_safe_subprocess.py", line 70
E       if completed.returncode != 0:
E                                    ^
E   IndentationError: unindent does not match any outer indentation level
=========================== short test summary info ============================
ERROR tests/test_ab_compare.py
!!!!!!!!!!!!!!!!!!!!!!!!!! stopping after 1 failures !!!!!!!!!!!!!!!!!!!!!!!!!!!
3 warnings, 1 error in 0.07s
/Users/jguida941/Dev/GitHubProject/AdaptiveHashMapCli/.venv/lib/python3.11/site-packages/coverage/inorout.py:521: CoverageWarning: Module hashmap_cli was never imported. (module-not-imported); see https://coverage.readthedocs.io/en/7.10.7/messages.html#warning-module-not-imported
  self.warn(f"Module {pkg} was never imported.", slug="module-not-imported")
